--- a/investors.css
+++ b/investors.css
@@ -490,3 +490,25 @@ footer {
     flex-wrap: wrap;
     justify-content: center;
 }
+
+/* CTA Button */
+.cta-btn {
+    padding: 10px 20px;
+    background-color: #3498db;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    /* justify-content: flex-end; */
+    margin-left: 1200px;
+    margin-top: 50px;
+    /* margin-bottom: 20px; */
+}
+#back{
+    text-decoration: none;
+}
+
+.cta-btn:hover {
+    background-color: #2980b9;
+}
